--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -9,9 +9,15 @@
   "author": "Johnathan Mitri",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.0",
     "discord.js": "^14.6.0",
     "firebase-admin": "^11.2.0",
+    "gtts": "^0.2.1",
     "mssql": "^9.0.1",
+    "node-lame": "^1.3.2",
+    "play-sound": "^1.1.5",
+    "sound-play": "^1.1.0",
+    "speaker": "^0.5.4",
     "ws": "^8.11.0"
   }
 }
